# btools-experiments

./: .gitignore  CMakeLists.txt
Applications/DT-Flow/: CMakeLists.txt  dt-flow.cpp
Applications/IIxMeanII/: CMakeLists.txt  IIxMeanII.cpp
Applications/coefficient-map/: CMakeLists.txt  coefficient-map.cpp
Applications/dcf-lp/: CMakeLists.txt  Linearization.h  Linearization.hpp  MultiIndex.h  dcf-lp.cpp  experiment-lp.sh
Applications/diffEnergy-study/: CMakeLists.txt  diffEnergy.cpp
Applications/diffEnergy-study/plot/: CMakeLists.txt
Applications/diffEnergy-study/plot/include/plot/: Data.h  DataInput.h  plot.h  utils.h
Applications/diffEnergy-study/plot/src/: plot.cpp
Applications/diffEnergy-study/plotConsistent/: CMakeLists.txt  plotConsistent.cpp
Applications/diffEnergy-study/tools/: CMakeLists.txt
Applications/diffEnergy-study/tools/include/tools/: TaylorEnergyDiff.h  utils.h
Applications/diffEnergy-study/tools/src/: Constants.cpp  Estimations.cpp  utils.cpp
Applications/epsilon-finder/: CMakeLists.txt  curvature.sage  epsilon-finder.cpp
Applications/figures/: CMakeLists.txt  cell-grid-model.cpp  figures.cpp  flow-intuition.cpp  main.cpp
Applications/figures/include/: cell-grid-model.h  flow-intuition.h  linel-pixel.h  linel-pixel.hpp  multigrid.h  utils.h
Applications/figures/src/: cell-grid-model.cpp  flow-intuition.cpp  linel-pixel.cpp  multigrid.cpp  utils.cpp
Applications/fill-holes/: CMakeLists.txt  holes-and-flow.sh
Applications/graphs/: flow.sh
Applications/illustration/: illustration.cpp
Applications/illustration/include/ElasticaProblem/: ElasticaProblem.h
Applications/illustration/src/: AroundBoundaryReasoning.cpp
Applications/illustration/src/ElasticaProblem/: ElasticaProblem.cpp
Applications/insideness/: CMakeLists.txt  insideness.cpp
Applications/insideness/include/: aproxCounting.h  around.h  assumeLabeling.h  counting.h  distance.h
Applications/insideness/src/: aproxCounting.cpp  around.cpp  assumeLabeling.cpp  counting.cpp  distance.cpp
Applications/intersection-flow/: CMakeLists.txt  intersection-flow.cpp
Applications/jmiv-illustration/: CMakeLists.txt  jmiv-illustration.cpp  jmiv-illustration.sh
Applications/labeling-levels/: CMakeLists.txt  labeling-levels.cpp
Applications/labeling-levels/include/: InputData.h  InputReader.h  dispUtils.h  energyUtils.h  probeSolver.h
Applications/labeling-levels/src/: InputReader.cpp  countUnlabeled.cpp  dispUtils.cpp  energyUtils.cpp
Applications/layers-intuition/: CMakeLists.txt  layers-intuition.cpp
Applications/levels-contribution/: CMakeLists.txt  levels-contribution.cpp
Applications/levels-contribution/include/: FlowControl.h  MockDistribution.h
Applications/linel-add-remove/: CMakeLists.txt  linel-add-remove.cpp
Applications/linel-correction/: CMakeLists.txt  linel-correction.cpp
Applications/maxEnergy-study/: CMakeLists.txt  curvature.sage  curvature2.sage  efinder.cpp  kfinder.cpp  plotRatioMaxEnergyTev.plt  plotRatioMaxEnergyTevGS.plt
Applications/maxEnergy-study/efinder/: CMakeLists.txt  efinder.cpp
Applications/maxEnergy-study/include/: Estimations.h  RootFinder.h  TaylorEnergy.h  utils.h
Applications/maxEnergy-study/kfinder/: CMakeLists.txt  gnuplotTemplate.plt
Applications/maxEnergy-study/kfinder/evaluation/: CMakeLists.txt  evaluation.cpp
Applications/maxEnergy-study/kfinder/plotConsistent/: CMakeLists.txt  plotConsistent.cpp
Applications/maxEnergy-study/kfinder/plotFixedGS/: CMakeLists.txt  plotFixedGS.cpp
Applications/maxEnergy-study/kfinder/plotGSEqualEpsilon/: CMakeLists.txt  plotGSEqualEpsilon.cpp
Applications/maxEnergy-study/plot/: CMakeLists.txt
Applications/maxEnergy-study/plot/include/plot/: Data.h  DataInput.h  plot.h  plot.hpp  utils.h
Applications/maxEnergy-study/plot/src/: plot.cpp  utils.cpp
Applications/maxEnergy-study/src/: Constants.cpp  Estimations.cpp  RootFinder.cpp  utils.cpp
Applications/maxEnergy-study/tools/: CMakeLists.txt
Applications/maxEnergy-study/tools/include/tools/: Constants.h  Estimations.h  RootFinder.h  TaylorEnergy.h  TaylorEnergyInterface.h  TaylorEnergyNoPower.h  TaylorEnergyPower2.h  utils.h
Applications/maxEnergy-study/tools/src/: Estimations.cpp  RootFinder.cpp  utils.cpp
Applications/mcf/: CMakeLists.txt  ii-unusual-behavior.cpp  mcf.cpp
Applications/morphology-flow/: CMakeLists.txt  experiments.sh  morphology-flow.cpp
Applications/odr-linels/: CMakeLists.txt  odr-linels.cpp
Applications/odr-linels/include/: FlowControl.h  MockDistribution.h
Applications/odr-linels/src/: FlowControl.cpp
Applications/reconnection-model/: CMakeLists.txt  reconnection-model.cpp
Applications/reconnection-model/include/: InputReader.h
Applications/reconnection-model/src/: InputReader.cpp
Applications/rings-and-labels/: CMakeLists.txt  generate-flows.sh  individual-comparison.sh  individualFlow.cpp  model-comparison.sh  modelFlow.cpp
Applications/rings-and-labels/plots/: graph-plot-pairwise.sh  graph-plot.sh
Applications/rings-and-labels/src/: countUnlabeled.cpp
Applications/uniform-perimeter/: CMakeLists.txt  uniform-perimeter.cpp
Applications/uniform-perimeter/include/: DataWriter.h  FlowControl.h  MockDistribution.h
Applications/uniform-perimeter/src/: DataWriter.cpp  FlowControl.cpp
Applications/warm-start/: CMakeLists.txt  warm-start.cpp
Applications/warm-start/include/: FlowControl.h
Applications/wave-behaviour/: CMakeLists.txt  wave-behaviour.cpp
ext-projects/: ExtProjects.cmake
ext-projects/cmake-files/: BTools.cmake  DIPaCUS.cmake  GCurve.cmake  GEOC.cmake  SCaBOliC-grid-adjustement.cmake  SCaBOliC.cmake  exhaustive-gc.cmake  lazy-combinator.cmake
images/: bean-shape-dwarf.pgm  bean-shape-small.pgm  bean-shape-super-dwarf.pgm  bean-shape.pgm
images/giraffe-gap/: mask-bg-0.pgm  mask-fg-0.pgm  mask-pbfg-0.pgm
